2012-02-23  H.J. Lu  <hongjiu.lu@intel.com>

	* test/pthread1.c: New.

	* Makefile: Build and run test/pthread1.c.

2012-02-23  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libc_common_src_files): Remove unistd/sigsuspend.c
	and replace arch-$(ARCH)/bionic/__sigsuspend.c with
	arch-$(ARCH)/bionic/sigsuspend.c for x32.

2011-12-14  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libc_common_src_files): Add sigsetjmp.S.

2011-12-14  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (INCLUDES): Use i387 for x86 and amd64 for x32.
	(libc_common_src_files): Remove unistd/lseek64.c and unistd/mmap.c.
	Support x32.
	(libm_common_src_files): Support x32.

2011-12-14  H.J. Lu  <hongjiu.lu@intel.com>

	* test/hello.c: Include <time.h>, <sys/stat.h> and <sys/statfs.h>.
	(hello): Print out sizes of time_t, off_t, struct stat and
	struct statfs.

2011-12-14  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (X32OBJS): Removed.
	(X32SHARED_LIBS): Likewise.
	(X32STATIC_LIBS): Likewise.

2011-12-08  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile ($(libexception-foo.so_LIB)): Depend on $(libc.so_LIB)
	$(libstdc++.so_LIB).

2011-12-08  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile: Build and run libexception-foo.so and
	exception-main.dynamic.

	* test/exception-foo.cc: New.
	* test/exception-main.cc: Likewise.

2011-12-07  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libm_common_src_files): Add sincos.c.
	(DYNAMIC_LIBSTDCXX): Add $(LIBGCC) after $(LIBSUPCXX).
	(STATIC_LIBSTDCXX): Likewise.

2011-06-13  H.J. Lu  <hongjiu.lu@intel.com>

	* test/hello.c (hello): New.
	(main): Use it.

2011-04-26  H.J. Lu  <hongjiu.lu@intel.com>

	* README: Updated.

2011-04-26  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (ARCH): Default to x86.

2011-04-26  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (BIONIC_LIBSTDCXX_DIR): New.
	(LIBSUPCXX): Likewise.
	(build-dynamic-c++-executable): Likewise.
	(build-static-c++-executable): Likewise.
	(build-shlib-ldflags): Likewise.
	(build-shlib): Add $($(@F)_LIBS).